--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicons - Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href="assets/img/logo 2.png" type="image/x-icon">
+    <link rel="icon" href="assets/img/logo 2.png" type="image/x-icon"> -->
 
     <!--==============================
 	  Google Fonts
@@ -74,7 +74,7 @@
         <div class="vs-menu-area text-center">
             <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.svg" alt="Educino"></a>
+                <a href="index.html"><img src="assets/img/logo.png" alt="Obat.In"></a>
             </div>
             <div class="vs-mobile-menu">
                 <ul>
@@ -157,91 +157,22 @@
                 <div class="container position-relative z-index-common">
                     <div class="row align-items-center justify-content-between">
                         <div class="col-auto">
-                            <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.svg" alt="logo"></a>
-                            </div>
+                            <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a> </div>
                         </div>
                         <div class="col text-end text-xl-center">
                             <nav class="main-menu menu-style1 d-none d-lg-block">
                                 <ul>
-                                    <li class="menu-item-has-children"> <a href="index.html">Demos</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Demo Style 1</a></li>
-                                            <li><a href="index-2.html">Demo Style 2</a></li>
-                                            <li><a href="index-3.html">Demo Style 3</a></li>
-                                        </ul>
-                                    </li>
-                                    <li> <a href="about.html">About Us</a> </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="course.html">Courses</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="course.html">Courses 1</a></li>
-                                            <li><a href="courses-2.html">Courses 2</a></li>
-                                            <li><a href="course-details.html">Course Details 1</a></li>
-                                            <li><a href="course-details-2.html">Course Details 2</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="blog.html">Tutor</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="team.html">Our Tutors</a></li>
-                                            <li><a href="team-details.html">Tutor Details</a></li>
-                                            <li><a href="become-tutor.html">Become Tutor</a></li>
-                                            <li><a href="find-tutor.html">Find Tutor</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children mega-menu-wrap"> <a href="#">Pages</a>
-                                        <ul class="mega-menu">
-                                            <li><a href="#">Pagelist 1</a>
-                                                <ul>
-                                                    <li><a href="index.html">Demo Style 1</a></li>
-                                                    <li><a href="index-2.html">Demo Style 2</a></li>
-                                                    <li><a href="index-3.html">Demo Style 3</a></li>
-                                                    <li><a href="about.html">About Us</a></li>
-                                                    <li><a href="contact.html">Contact Us</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">Pagelist 2</a>
-                                                <ul>
-                                                    <li><a href="course.html">Courses 1</a></li>
-                                                    <li><a href="courses-2.html">Courses 2</a></li>
-                                                    <li><a href="course-details.html">Courses Details 1</a></li>
-                                                    <li><a href="course-details-2.html">Courses Details 2</a></li>
-                                                    <li><a href="event-details.html">Event Details</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">Pagelist 3</a>
-                                                <ul>
-                                                    <li><a href="academic.html">Academic</a></li>
-                                                    <li><a href="academic-program.html">Academic Program</a></li>
-                                                    <li><a href="program-details.html">Program Details</a></li>
-                                                    <li><a href="find-program.html">Find Program</a></li>
-                                                    <li><a href="login-register.html">Login Register</a></li>
-                                                    <li><a href="error.html">Error Page</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">Pagelist 4</a>
-                                                <ul>
-                                                    <li><a href="team.html">Our Tutors</a></li>
-                                                    <li><a href="team-details.html">Tutor Details</a></li>
-                                                    <li><a href="become-tutor.html">Become Tutor</a></li>
-                                                    <li><a href="find-tutor.html">Find Tutor</a></li>
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li> <a href="index.html">Beranda</a> </li>
+                                    <li> <a href="index.html#artikel">Artikel</a> </li>
+                                    <li> <a href="consultation.html">Konsultasi</a> </li>                                  
+                                    <li><a href="about.html">About Us</a></li>
                                 </ul>
                             </nav>
                             <button class="vs-menu-toggle d-inline-block d-lg-none"><i class="fal fa-bars"></i></button>
                         </div>
                         <div class="col-auto d-none d-xl-block">
-                            <div class="header-btns">
-                                <div class="col col-xl-auto d-none d-md-block">
-                                    <a class="user-login" href="login-register.html"><i
-                                            class="fas fa-user-circle"></i>Login & Register</a>
-                                </div>
+                            <div class="col col-xl-auto d-none d-md-block">
+                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i> Login & Register</a>
                             </div>
                         </div>
                     </div>
@@ -395,11 +326,11 @@
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-map-marker-alt"></i>
-                        Pondok Cina, Beji, Kota Depok, Jawa Barat
+                        PT Media Dokter Investama Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-phone-alt"></i>
-                        <a class="text-inherit" href="tel:+6221123456789">(021) 123 456 789</a>
+                        <a class="text-inherit" href="tel:+6221123456789">021-3110-6999</a>
                     </p>
                     <p class="contact-info">
                         <i class="fas fa-envelope"></i>
@@ -482,14 +413,12 @@
                 </div>
                 <div class="col-6 col-md-6 col-xl-auto">
                     <div class="widget nav_menu footer-widget">
-                        
                         <div class="menu-all-pages-container footer-menu">
                             <ul class="menu">
                                 <br>
                                 <br>
                                 <br>
                                 <li><a href="">Karir</a></li>
-                                <li><a href="">Security</a></li>
                                 <li><a href="">Media</a></li>
                                 <li><a href="">Corporate Partnership</a></li>
                             </ul>
