feat: page consistency

--- a/about.html
+++ b/about.html
@@ -78,52 +78,13 @@
             </div>
             <div class="vs-mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
-                        <a href="index.html">Demos</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Demo Style 1</a></li>
-                            <li><a href="index-2.html">Demo Style 2</a></li>
-                            <li><a href="index-3.html">Demo Style 3</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="course.html">Courses</a>
-                        <ul class="sub-menu">
-                            <li><a href="course.html">Courses 1</a></li>
-                            <li><a href="courses-2.html">Courses 2</a></li>
-                            <li><a href="course-details.html">Courses Details 1</a></li>
-                            <li><a href="course-details-2.html">Courses Details 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="blog.html">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li><a href="team.html">Our Tutors</a></li>
-                            <li><a href="team-details.html">Tutor Details</a></li>
-                            <li><a href="become-tutor.html">Become Tutor</a></li>
-                            <li><a href="find-tutor.html">Find Tutor</a></li>
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="academic-program.html">Academic Program</a></li>
-                            <li><a href="program-details.html">Program Details</a></li>
-                            <li><a href="find-program.html">Find Program</a></li>
-                            <li><a href="event-details.html">Event Details</a></li>
-                            <li><a href="login-register.html">Login Register</a></li>
-                            <li><a href="error.html">Error Page</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact Us</a>
-                    </li>
+                    <ul>
+                        <li> <a href="index.html">Beranda</a> </li>
+                        <li> <a href="index.html#artikel">Artikel</a> </li>
+                        <li> <a href="consultation.html">Konsultasi</a> </li>                                  
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="login-register.html">Login & Register</a></li>
+                    </ul>
                 </ul>
             </div>
         </div>
@@ -402,11 +363,10 @@
                         <h3 class="widget_title">Site Map</h3>
                         <div class="menu-all-pages-container footer-menu">
                             <ul class="menu">
-                                <li><a href="">FAQ</a></li>
-                                <li><a href="">Blog</a></li>
-                                <li><a href="">Syarat & Ketentuan</a></li>
-                                <li><a href="">Kebijakan Privasi</a></li>
-                                <li><a href="">Promo</a></li>
+                                <li><a href="index.html">Beranda</a></li>
+                                <li><a href="index.html#artikel">Artikel</a></li>
+                                <li><a href="consultation.html">Konsultasi</a></li>
+                                <li><a href="about.html">About Us</a></li>
                             </ul>
                         </div>
                     </div>
