--- a/index.html
+++ b/index.html
@@ -78,53 +78,14 @@
             </div>
             <div class="vs-mobile-menu">
                 <ul>
-                    <li class="menu-item-has-children">
-                        <a href="index.html">Demos</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Demo Style 1</a></li>
-                            <li><a href="index-2.html">Demo Style 2</a></li>
-                            <li><a href="index-3.html">Demo Style 3</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="about.html">About Us</a>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="course.html">Courses</a>
-                        <ul class="sub-menu">
-                            <li><a href="course.html">Courses 1</a></li>
-                            <li><a href="courses-2.html">Courses 2</a></li>
-                            <li><a href="course-details.html">Courses Details 1</a></li>
-                            <li><a href="course-details-2.html">Courses Details 2</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="blog.html">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li><a href="team.html">Our Tutors</a></li>
-                            <li><a href="team-details.html">Tutor Details</a></li>
-                            <li><a href="become-tutor.html">Become Tutor</a></li>
-                            <li><a href="find-tutor.html">Find Tutor</a></li>
-                            <li><a href="academic.html">Academic</a></li>
-                            <li><a href="academic-program.html">Academic Program</a></li>
-                            <li><a href="program-details.html">Program Details</a></li>
-                            <li><a href="find-program.html">Find Program</a></li>
-                            <li><a href="event-details.html">Event Details</a></li>
-                            <li><a href="login-register.html">Login Register</a></li>
-                            <li><a href="error.html">Error Page</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact Us</a>
-                    </li>
+                    <li> <a href="index.html">Beranda</a> </li>
+                    <li> <a href="index.html#artikel">Artikel</a> </li>
+                    <li> <a href="consultation.html">Konsultasi</a> </li>                                  
+                    <li> <a href="about.html">About Us</a></li>
+                    <li> <a href="login-register.html">Login & Register</a></li>
                 </ul>
+            </div>
+            <div class="col-auto d-none d-xl-block">
             </div>
         </div>
     </div><!--==============================
@@ -646,73 +607,70 @@
     <!--==============================
     Footer Area
   ==============================-->
-    <footer class="footer-wrapper footer-layout1">
-        <div class="widget-area">
-            <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-md-6 col-xl-auto">
-                        <div class="widget footer-widget">
-                            <div class="vs-widget-about">
-                                <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo 2.png" alt="logo"></a> </div>
-                                <h5>Layanan Pengaduan Konsumen</h5>
-                                <p class="footer-text">PT Media Dokter Investama
-                                    Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
-                                    </p>
-                                <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:++11234562228">021-3110-6999</a></p>
-                                <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:info@example.com">help@obatin.com</a></p>
-                            </div>
+  <footer class="footer-wrapper footer-layout1">
+    <div class="widget-area">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-md-6 col-xl-auto">
+                    <div class="widget footer-widget">
+                        <div class="vs-widget-about">
+                            <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo 2.png" alt="logo"></a> </div>
+                            <h5>Layanan Pengaduan Konsumen</h5>
+                            <p class="footer-text">PT Media Dokter Investama
+                                Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
+                                </p>
+                            <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:++11234562228">021-3110-6999</a></p>
+                            <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:info@example.com">help@obatin.com</a></p>
                         </div>
                     </div>
-                    <div class="col-6 col-md-6 col-xl-auto">
-                        <div class="widget nav_menu footer-widget">
-                            <h3 class="widget_title">Site Map</h3>
-                            <div class="menu-all-pages-container footer-menu">
-                                <ul class="menu">
-                                    <li><a href="">FAQ</a></li>
-                                    <li><a href="">Blog</a></li>
-                                    <li><a href="">Syarat & Ketentuan</a></li>
-                                    <li><a href="">Kebijakan Privasi</a></li>
-                                    <li><a href="">Promo</a></li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-6 col-md-6 col-xl-auto">
+                    <div class="widget nav_menu footer-widget">
+                        <h3 class="widget_title">Site Map</h3>
+                        <div class="menu-all-pages-container footer-menu">
+                            <ul class="menu">
+                                <li><a href="index.html">Beranda</a></li>
+                                <li><a href="index.html#artikel">Artikel</a></li>
+                                <li><a href="consultation.html">Konsultasi</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                            </ul>
                         </div>
                     </div>
-                    <div class="col-6 col-md-6 col-xl-auto">
-                        <div class="widget nav_menu footer-widget">
-                            
-                            <div class="menu-all-pages-container footer-menu">
-                                <ul class="menu">
-                                    <br>
-                                    <br>
-                                    <br>
-                                    <li><a href="">Karir</a></li>
-                                    <li><a href="">Security</a></li>
-                                    <li><a href="">Media</a></li>
-                                    <li><a href="">Corporate Partnership</a></li>
-                                </ul>
-                            </div>
+                </div>
+                <div class="col-6 col-md-6 col-xl-auto">
+                    <div class="widget nav_menu footer-widget">
+                        <div class="menu-all-pages-container footer-menu">
+                            <ul class="menu">
+                                <br>
+                                <br>
+                                <br>
+                                <li><a href="">Karir</a></li>
+                                <li><a href="">Media</a></li>
+                                <li><a href="">Corporate Partnership</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright-wrap">
-            <div class="container">
-                <div class="row justify-content-between align-items-center">
-                    <div class="text-center col-lg-auto">
-                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Obat.in</a>. All Rights Reserved By <a href="">Black Plague</a></p>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <div class="social-style1">
-                            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-                            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
-                        </div>
+    </div>
+    <div class="copyright-wrap">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="text-center col-lg-auto">
+                    <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Obat.in</a>. All Rights Reserved By <a href="">Black Plague</a></p>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <div class="social-style1">
+                        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                        <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
                     </div>
                 </div>
             </div>
         </div>
-    </footer> <!-- Scroll To Top -->
+    </div>
+</footer> <!-- Scroll To Top -->
     <a href="#" class="scrollToTop scroll-btn"><i class="far fa-arrow-up"></i></a>
 
     <!--********************************
