--- a/consultation.html
+++ b/consultation.html
@@ -202,7 +202,7 @@
                     <div class="team-style2 has-border">
                         <div class="team-content">
                             <h4 class="team-name h5"><a href="doctor-details.html">Dr. Gracia</a></h4>
-                            <p class="team-degi">Sp. Anak (Penyakit Tropik-Infeksi)</p>
+                            <p class="team-degi">Sp. Anak</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
                                 <img src="assets/img/team/team-s-3-1.png" alt="member">
