--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                     <ul>
                         <li> <a href="index.html">Beranda</a> </li>
                         <li> <a href="index.html#artikel">Artikel</a> </li>
-                        <li> <a href="consultation.html">Konsultasi</a> </li>                                  
+                        <li> <a href="consultation.html">Konsultasi</a> </li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="login-register.html">Login & Register</a></li>
                     </ul>
@@ -118,14 +118,15 @@
                 <div class="container position-relative z-index-common">
                     <div class="row align-items-center justify-content-between">
                         <div class="col-auto">
-                            <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a> </div>
+                            <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                            </div>
                         </div>
                         <div class="col text-end text-xl-center">
                             <nav class="main-menu menu-style1 d-none d-lg-block">
                                 <ul>
                                     <li> <a href="index.html">Beranda</a> </li>
                                     <li> <a href="index.html#artikel">Artikel</a> </li>
-                                    <li> <a href="consultation.html">Konsultasi</a> </li>                                  
+                                    <li> <a href="consultation.html">Konsultasi</a> </li>
                                     <li><a href="about.html">About Us</a></li>
                                 </ul>
                             </nav>
@@ -133,7 +134,8 @@
                         </div>
                         <div class="col-auto d-none d-xl-block">
                             <div class="col col-xl-auto d-none d-md-block">
-                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i> Login & Register</a>
+                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i>
+                                    Login & Register</a>
                             </div>
                         </div>
                     </div>
@@ -341,70 +343,74 @@
     <!--==============================
     Footer Area
   ==============================-->
-  <footer class="footer-wrapper footer-layout1">
-    <div class="widget-area">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-md-6 col-xl-auto">
-                    <div class="widget footer-widget">
-                        <div class="vs-widget-about">
-                            <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo 2.png" alt="logo"></a> </div>
-                            <h5>Layanan Pengaduan Konsumen</h5>
-                            <p class="footer-text">PT Media Dokter Investama
-                                Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
+    <footer class="footer-wrapper footer-layout1">
+        <div class="widget-area">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-md-6 col-xl-auto">
+                        <div class="widget footer-widget">
+                            <div class="vs-widget-about">
+                                <div class="footer-logo"> <a href="index.html"><img src="assets/img/logo 2.png"
+                                            alt="logo"></a> </div>
+                                <h5>Layanan Pengaduan Konsumen</h5>
+                                <p class="footer-text">PT Media Dokter Investama
+                                    Jl. H.R. Rasuna Said Kav B32-33, Jakarta Selatan
                                 </p>
-                            <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit" href="tel:++11234562228">021-3110-6999</a></p>
-                            <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit" href="mailto:info@example.com">help@obatin.com</a></p>
+                                <p class="footer-info"><i class="fal fa-phone-alt"></i><a class="text-inherit"
+                                        href="tel:++11234562228">021-3110-6999</a></p>
+                                <p class="footer-info"><i class="fal fa-envelope"></i><a class="text-inherit"
+                                        href="mailto:info@example.com">help@obatin.com</a></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-6 col-md-6 col-xl-auto">
-                    <div class="widget nav_menu footer-widget">
-                        <h3 class="widget_title">Site Map</h3>
-                        <div class="menu-all-pages-container footer-menu">
-                            <ul class="menu">
-                                <li><a href="index.html">Beranda</a></li>
-                                <li><a href="index.html#artikel">Artikel</a></li>
-                                <li><a href="consultation.html">Konsultasi</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                            </ul>
+                    <div class="col-6 col-md-6 col-xl-auto">
+                        <div class="widget nav_menu footer-widget">
+                            <h3 class="widget_title">Site Map</h3>
+                            <div class="menu-all-pages-container footer-menu">
+                                <ul class="menu">
+                                    <li><a href="index.html">Beranda</a></li>
+                                    <li><a href="index.html#artikel">Artikel</a></li>
+                                    <li><a href="consultation.html">Konsultasi</a></li>
+                                    <li><a href="about.html">About Us</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-6 col-md-6 col-xl-auto">
-                    <div class="widget nav_menu footer-widget">
-                        <div class="menu-all-pages-container footer-menu">
-                            <ul class="menu">
-                                <br>
-                                <br>
-                                <br>
-                                <li><a href="">Karir</a></li>
-                                <li><a href="">Media</a></li>
-                                <li><a href="">Corporate Partnership</a></li>
-                            </ul>
+                    <div class="col-6 col-md-6 col-xl-auto">
+                        <div class="widget nav_menu footer-widget">
+                            <div class="menu-all-pages-container footer-menu">
+                                <ul class="menu">
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <li><a href="">Karir</a></li>
+                                    <li><a href="">Media</a></li>
+                                    <li><a href="">Corporate Partnership</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="copyright-wrap">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
-                <div class="text-center col-lg-auto">
-                    <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a href="index.html">Obat.in</a>. All Rights Reserved By <a href="">Black Plague</a></p>
-                </div>
-                <div class="col-auto d-none d-lg-block">
-                    <div class="social-style1">
-                        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-                        <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
+        <div class="copyright-wrap">
+            <div class="container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="text-center col-lg-auto">
+                        <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2023 <a
+                                href="index.html">Obat.in</a>. All Rights Reserved By <a href="">Black Plague</a></p>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <div class="social-style1">
+                            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i>Linked In</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer> <!-- Scroll To Top -->
+    </footer> <!-- Scroll To Top -->
     <a href="#" class="scrollToTop scroll-btn"><i class="far fa-arrow-up"></i></a>
 
     <!--********************************
