--- a/consultation.html
+++ b/consultation.html
@@ -82,15 +82,16 @@
                         <li> <a href="index.html">Beranda</a> </li>
                         <li> <a href="index.html#artikel">Artikel</a> </li>
                         <li> <a href="consultation.html">Konsultasi</a> </li>
-                        <li> <a href="about.html">About Us</a></li>
-                        <li> <a href="login-register.html">Login & Register</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
+                </ul>
             </div>
         </div>
     </div>
     <!--==============================
-    Popup Search Box
-    ============================== -->
+Popup Search Box
+============================== -->
     <div class="popup-search-box d-none d-lg-block  ">
         <button class="searchClose"><i class="fal fa-times"></i></button>
         <form action="#">
@@ -99,11 +100,17 @@
         </form>
     </div>
     <!--==============================
-    Header Area
-    ==============================-->
+Header Area
+==============================-->
     <header class="vs-header header-layout1">
         <div class="header-top">
             <div class="container">
+                <div class="row justify-content-between align-items-center gx-50">
+                    <div class="col d-none d-xl-block">
+                    </div>
+                    <div class="col-md-auto text-center">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="sticky-wrapper">
@@ -127,8 +134,8 @@
                         </div>
                         <div class="col-auto d-none d-xl-block">
                             <div class="col col-xl-auto d-none d-md-block">
-                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i>
-                                    Login & Register</a>
+                                <a class="user-login" href="login.html"><i class="fas fa-user-circle"></i>
+                                    Login</a>
                             </div>
                         </div>
                     </div>
@@ -173,7 +180,7 @@
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 40.000 </span><br>/ per konsul</span>
                             <p class="team-experi">6+ tahun pengalaman kerja</p>
@@ -189,7 +196,7 @@
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 50.000 </span><br>/ per konsul</span>
                             <p class="team-experi">12+ tahun pengalaman kerja</p>
@@ -205,7 +212,7 @@
                             <p class="team-degi">Sp. Anak</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 100.000 </span><br>/ per konsul</span>
                             <p class="team-experi">12+ tahun pengalaman kerja</p>
@@ -221,7 +228,7 @@
                             <p class="team-degi">Sp. Anak</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 300.000 </span><br>/ per konsul</span>
                             <p class="team-experi">6+ tahun pengalaman kerja</p>
@@ -237,7 +244,7 @@
                             <p class="team-degi">Sp. Penyakit Dalam</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 200.000 </span><br>/ per konsul</span>
                             <p class="team-experi">9+ tahun pengalaman kerja</p>
@@ -253,7 +260,7 @@
                             <p class="team-degi">Sp. Jiwa</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 150.000 </span><br>/ per konsul</span>
                             <p class="team-experi">6+ tahun pengalaman kerja</p>
@@ -269,7 +276,7 @@
                             <p class="team-degi">Dokter Umum</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 190.000 </span><br>/ per konsul</span>
                             <p class="team-experi">6+ tahun pengalaman kerja</p>
@@ -285,7 +292,7 @@
                             <p class="team-degi">Sp. THT</p>
                             <span class="team-courses">100+ Konsultasi Selesai</span>
                             <div class="team-img">
-                                <img src="assets/img/team/team-s-3-1.png" alt="member">
+                                <img src="assets/img/about/icon-doctor.png" alt="member">
                             </div>
                             <span class="team-rate"><span class="team-price">Rp 250.000 </span><br>/ per konsul</span>
                             <p class="team-experi">6+ tahun pengalaman kerja</p>
