--- a/form-patient.html
+++ b/form-patient.html
@@ -83,15 +83,15 @@
                         <li> <a href="index.html#artikel">Artikel</a> </li>
                         <li> <a href="consultation.html">Konsultasi</a> </li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="login-register.html">Login & Register</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </ul>
             </div>
         </div>
     </div>
     <!--==============================
-    Popup Search Box
-    ============================== -->
+Popup Search Box
+============================== -->
     <div class="popup-search-box d-none d-lg-block  ">
         <button class="searchClose"><i class="fal fa-times"></i></button>
         <form action="#">
@@ -100,8 +100,8 @@
         </form>
     </div>
     <!--==============================
-    Header Area
-    ==============================-->
+Header Area
+==============================-->
     <header class="vs-header header-layout1">
         <div class="header-top">
             <div class="container">
@@ -134,8 +134,8 @@
                         </div>
                         <div class="col-auto d-none d-xl-block">
                             <div class="col col-xl-auto d-none d-md-block">
-                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i>
-                                    Login & Register</a>
+                                <a class="user-login" href="login.html"><i class="fas fa-user-circle"></i>
+                                    Login</a>
                             </div>
                         </div>
                     </div>
