--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
 
     <!--********************************
-   		Code Start From Here 
+   		Code Start From Here
 	******************************** -->
 
 
@@ -83,7 +83,7 @@
                         <li> <a href="index.html#artikel">Artikel</a> </li>
                         <li> <a href="consultation.html">Konsultasi</a> </li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="login-register.html">Login & Register</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </ul>
             </div>
@@ -134,8 +134,8 @@
                         </div>
                         <div class="col-auto d-none d-xl-block">
                             <div class="col col-xl-auto d-none d-md-block">
-                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i>
-                                    Login & Register</a>
+                                <a class="user-login" href="login.html"><i class="fas fa-user-circle"></i>
+                                    Login</a>
                             </div>
                         </div>
                     </div>
@@ -414,7 +414,7 @@
     <a href="#" class="scrollToTop scroll-btn"><i class="far fa-arrow-up"></i></a>
 
     <!--********************************
-			Code End  Here 
+			Code End  Here
 	******************************** -->
 
     <!--==============================
