--- a/chat.html
+++ b/chat.html
@@ -69,78 +69,79 @@
     </div><!--==============================
     Mobile Menu
   ============================== -->
-    <div class="vs-menu-wrapper">
-        <div class="vs-menu-area text-center">
-            <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
-            <div class="mobile-logo">
-                <a href="index.html"><img src="assets/img/logo.png" alt="Obat.In"></a>
-            </div>
-            <div class="vs-mobile-menu">
+  <div class="vs-menu-wrapper">
+    <div class="vs-menu-area text-center">
+        <button class="vs-menu-toggle"><i class="fal fa-times"></i></button>
+        <div class="mobile-logo">
+            <a href="index.html"><img src="assets/img/logo.png" alt="Obat.In"></a>
+        </div>
+        <div class="vs-mobile-menu">
+            <ul>
                 <ul>
-                    <ul>
-                        <li> <a href="index.html">Beranda</a> </li>
-                        <li> <a href="index.html#artikel">Artikel</a> </li>
-                        <li> <a href="consultation.html">Konsultasi</a> </li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="login-register.html">Login & Register</a></li>
-                    </ul>
+                    <li> <a href="index.html">Beranda</a> </li>
+                    <li> <a href="index.html#artikel">Artikel</a> </li>
+                    <li> <a href="consultation.html">Konsultasi</a> </li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="login.html">Login</a></li>
                 </ul>
-            </div>
+            </ul>
         </div>
-    </div><!--==============================
-    Popup Search Box
-    ============================== -->
-    <div class="popup-search-box d-none d-lg-block  ">
-        <button class="searchClose"><i class="fal fa-times"></i></button>
-        <form action="#">
-            <input type="text" class="border-theme" placeholder="What are you looking for">
-            <button type="submit"><i class="fal fa-search"></i></button>
-        </form>
     </div>
-    <!--==============================
-    Header Area
-    ==============================-->
-    <header class="vs-header header-layout1">
-        <div class="header-top">
-            <div class="container">
-                <div class="row justify-content-between align-items-center gx-50">
-                    <div class="col d-none d-xl-block">
+</div>
+<!--==============================
+Popup Search Box
+============================== -->
+<div class="popup-search-box d-none d-lg-block  ">
+    <button class="searchClose"><i class="fal fa-times"></i></button>
+    <form action="#">
+        <input type="text" class="border-theme" placeholder="What are you looking for">
+        <button type="submit"><i class="fal fa-search"></i></button>
+    </form>
+</div>
+<!--==============================
+Header Area
+==============================-->
+<header class="vs-header header-layout1">
+    <div class="header-top">
+        <div class="container">
+            <div class="row justify-content-between align-items-center gx-50">
+                <div class="col d-none d-xl-block">
+                </div>
+                <div class="col-md-auto text-center">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sticky-wrapper">
+        <div class="sticky-active">
+            <div class="container position-relative z-index-common">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-auto">
+                        <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
+                        </div>
                     </div>
-                    <div class="col-md-auto text-center">
+                    <div class="col text-end text-xl-center">
+                        <nav class="main-menu menu-style1 d-none d-lg-block">
+                            <ul>
+                                <li> <a href="index.html">Beranda</a> </li>
+                                <li> <a href="index.html#artikel">Artikel</a> </li>
+                                <li> <a href="consultation.html">Konsultasi</a> </li>
+                                <li><a href="about.html">About Us</a></li>
+                            </ul>
+                        </nav>
+                        <button class="vs-menu-toggle d-inline-block d-lg-none"><i class="fal fa-bars"></i></button>
+                    </div>
+                    <div class="col-auto d-none d-xl-block">
+                        <div class="col col-xl-auto d-none d-md-block">
+                            <a class="user-login" href="login.html"><i class="fas fa-user-circle"></i>
+                                Login</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="sticky-wrapper">
-            <div class="sticky-active">
-                <div class="container position-relative z-index-common">
-                    <div class="row align-items-center justify-content-between">
-                        <div class="col-auto">
-                            <div class="vs-logo"> <a href="index.html"><img src="assets/img/logo.png" alt="logo"></a>
-                            </div>
-                        </div>
-                        <div class="col text-end text-xl-center">
-                            <nav class="main-menu menu-style1 d-none d-lg-block">
-                                <ul>
-                                    <li> <a href="index.html">Beranda</a> </li>
-                                    <li> <a href="index.html#artikel">Artikel</a> </li>
-                                    <li> <a href="consultation.html">Konsultasi</a> </li>
-                                    <li><a href="about.html">About Us</a></li>
-                                </ul>
-                            </nav>
-                            <button class="vs-menu-toggle d-inline-block d-lg-none"><i class="fal fa-bars"></i></button>
-                        </div>
-                        <div class="col-auto d-none d-xl-block">
-                            <div class="col col-xl-auto d-none d-md-block">
-                                <a class="user-login" href="login-register.html"><i class="fas fa-user-circle"></i>
-                                    Login & Register</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    </div>
+</header>
     <section class="space-top space-extra-bottom">
         <div class="container">
             <div class="row gx-60 mx-auto justify-content-center">
